update happy cases
