# cmd/docs/swagger.json
@@ -49,6 +49,17 @@
                     "application/json"
                 ],
                 "summary": "Record a transaction",
+                "parameters": [
+                    {
+                        "description": "Transactions",
+                        "name": "model",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/viewmodels.TransactionRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -97,6 +108,15 @@
                         "name": "transaction_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Feedback transaction",
+                        "name": "model",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/viewmodels.TransactionFeedbackRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -111,6 +131,31 @@
         }
     },
     "definitions": {
+        "viewmodels.TransactionFeedbackRequest": {
+            "type": "object",
+            "properties": {
+                "is_transaction_success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "viewmodels.TransactionRequest": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "card_id": {
+                    "type": "string"
+                },
+                "transaction_id": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "viewmodels.TransactionResponse": {
             "type": "object",
             "properties": {
