# view_models/transaction/transaction_feedback_request.go
@@ -1,0 +1,5 @@
+package viewmodels
+
+type TransactionFeedbackRequest struct {
+	IsTransactionSuccess bool `json:"is_transaction_success"`
+}
